# mcp_video_transcriber

./: .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  env.example  health-check.sh  main.py  mcp_server.py  pyproject.toml  sse.py
nginx/conf.d/: default.conf
oauth/: __init__.py  auth.py  endpoints.py  models.py
